@@ -477,12 +477,12 @@ function initToadTraitsPerks(_player)
         local PerkLevel = player:getPerkLevel(Perks.Aiming);
         if PerkLevel ~= 10 and PerkLevel ~= 9 then
             player:LevelPerk(Perks.Aiming);
-            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel + 1);
             player:LevelPerk(Perks.Aiming);
-            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel + 2);
         elseif PerkLevel == 9 then
             player:LevelPerk(Perks.Aiming);
-            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Aiming, PerkLevel + 1);
         end
     end
     if player:HasTrait("noxptechnician") then
@@ -490,35 +490,35 @@ function initToadTraitsPerks(_player)
         local PerkLevel2 = player:getPerkLevel(Perks.Electricity);
         if PerkLevel1 ~= 10 then
             player:LevelPerk(Perks.Mechanics);
-            player:getXp():setXPToLevel(Perks.Mechanics, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Mechanics, PerkLevel1 + 1);
         end
         if PerkLevel2 ~= 10 and PerkLevel2 ~= 9 then
             player:LevelPerk(Perks.Electricity);
-            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2);
+            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2 + 1);
             player:LevelPerk(Perks.Electricity);
-            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2);
+            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2 + 2);
         elseif PerkLevel == 9 then
             player:LevelPerk(Perks.Electricity);
-            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2);
+            player:getXp():setXPToLevel(Perks.Electricity, PerkLevel2 + 1);
         end
     end
     if player:HasTrait("noxpfirstaid") then
         local PerkLevel = player:getPerkLevel(Perks.Doctor);
         if PerkLevel ~= 10 and PerkLevel ~= 9 and PerkLevel ~= 8 then
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 1);
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 2);
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 3);
         elseif Level ~= 10 and PerkLevel ~= 9 then
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 1);
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 2);
         elseif PerkLevel == 9 then
             player:LevelPerk(Perks.Doctor);
-            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Doctor, PerkLevel + 1);
         end
     end
     if player:HasTrait("noxpaxe") then
@@ -526,28 +526,28 @@ function initToadTraitsPerks(_player)
         local PerkLevel2 = player:getPerkLevel(Perks.Woodwork);
         if PerkLevel1 ~= 10 and PerkLevel1 ~= 9 then
             player:LevelPerk(Perks.Axe);
-            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1 + 1);
             player:LevelPerk(Perks.Axe);
-            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1 + 2);
         elseif PerkLevel1 == 9 then
             player:LevelPerk(Perks.Axe);
-            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Axe, PerkLevel1 + 1);
         end
         if PerkLevel2 ~= 10 then
             player:LevelPerk(Perks.Woodwork);
-            player:getXp():setXPToLevel(Perks.Woodwork, PerkLevel2);
+            player:getXp():setXPToLevel(Perks.Woodwork, PerkLevel2 + 1);
         end
     end
     if player:HasTrait("noxpmaintenance") then
         local PerkLevel = player:getPerkLevel(Perks.Maintenance);
         if PerkLevel ~= 10 and PerkLevel ~= 9 then
             player:LevelPerk(Perks.Maintenance);
-            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel + 1);
             player:LevelPerk(Perks.Maintenance);
-            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel + 2);
         elseif PerkLevel == 9 then
             player:LevelPerk(Perks.Maintenance);
-            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel);
+            player:getXp():setXPToLevel(Perks.Maintenance, PerkLevel + 1);
         end
     end
     if player:HasTrait("noxpsneaky") then
@@ -555,16 +555,16 @@ function initToadTraitsPerks(_player)
         local PerkLevel2 = player:getPerkLevel(Perks.Lightfoot);
         if PerkLevel1 ~= 10 and PerkLevel ~= 9 then
             player:LevelPerk(Perks.Sneak);
-            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1 + 1);
             player:LevelPerk(Perks.Sneak);
-            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1 + 2);
         elseif PerkLevel1 == 9 then
             player:LevelPerk(Perks.Sneak);
-            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1);
+            player:getXp():setXPToLevel(Perks.Sneak, PerkLevel1 + 1);
         end
         if PerkLevel2 ~= 10 then
             player:LevelPerk(Perks.Lightfoot);
-            player:getXp():setXPToLevel(Perks.Lightfoot, PerkLevel2);
+            player:getXp():setXPToLevel(Perks.Lightfoot, PerkLevel2 + 1);
         end
     end
 end
