@@ -6,3 +6,4 @@ Restful Sleeper automatically wakes you up once you reach 0 fatigue.
 Hardy internal regeneration is affected by game speed.
 Fixed Hardy Errors
 Noodle Legs' system has been reworked, making traits and sprinting/nimble levels more useful.
+Fixed negative exp with no exp multiplier traits.
